[Starts #171648194] Create accommodation facility
