# swagger.json
@@ -6,7 +6,7 @@
     "description": "Barefoot Normads done by Champs in Stackup 3.",
     "contact": {}
   },
-  "host": "https://champs-bn-api.herokuapp.com",
+  "host": "champs-bn-api.herokuapp.com",
   "basePath": "/api/v1",
   "securityDefinitions": {},
   "schemes": [
@@ -709,7 +709,45 @@
           }
         }
       }
+    },
+    "/accommodation": {
+      "post": {
+        "tags": [
+          "Accommodation"
+        ],
+        "summary": "Accommodation registration",
+        "description": "User can register an accommodation",
+        "parameters": [{
+            "name": "token",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "token given when user signs in"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "data needed to register an accommodation",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AccommodationCreation"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Accommodation was registered successfully."
+          },
+          "422": {
+            "description": "Invalid data"
+          },
+          "409": {
+            "description": "Accommodation facility already exists"
+          }
+        }
+      }
     }
+    
   },
   "definitions": {
     "signin": {
@@ -942,6 +980,55 @@
       "required": [
         "status"
       ]
+    },
+    "AccommodationCreation": {
+      "title": "register an accommodation",
+      "example": {
+        "name": "Mille Collines Hotel",
+          "description": "we can have you any time",
+          "locationId": 1,
+          "amenities": "hey hey You will enjoy",
+          "images":["https://mcdn.wallpapersafari.com/medium/91/83/jECzOG.jpg", "https://mcdn.wallpapersafari.com/medium/40/15/fmFJbU.jpg"],
+          "rooms": [{
+            "roomType": "Single",
+            "numberOfRooms": 5,
+            "roomAmenities": "hey hey You will enjoy",
+            "roomImages":["https://mcdn.wallpapersafari.com/medium/91/83/jECzOG.jpg", "https://mcdn.wallpapersafari.com/medium/40/15/fmFJbU.jpg"],
+            "cost": 600
+          },
+          {
+            "roomType": "Double",
+            "numberOfRooms": 5,
+            "roomAmenities": "hey hey You will enjoy",
+            "roomImages":["https://mcdn.wallpapersafari.com/medium/91/83/jECzOG.jpg", "https://mcdn.wallpapersafari.com/medium/40/15/fmFJbU.jpg"],
+            "cost": 600
+          }]
+      },
+      "type": "object",
+      "required": [
+        "name",
+        "description",
+        "locationId",
+        "amenities",
+        "rooms"
+      ],
+      "properties": {
+        "departure": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "locationId": {
+          "type": "integer"
+        },
+        "amenities": {
+          "type": "string"
+        },
+        "rooms": {
+          "type": "array"
+        }
+      }
     }
   }
 }
